--- a/ProjectCode/Web/Templates/index.html
+++ b/ProjectCode/Web/Templates/index.html
@@ -1,26 +1,32 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <title>CloudComputing</title>
   <link rel="stylesheet" href="styles.css">
   <script src="jQuery.js"></script>
   <script src="index.js"></script>
-  <script> 
-    $(function(){
-      $("#DivContent").load("header.html"); 
-    });
-  </script>
-
 </head>  
 <body>
 <div class="main-container"> 
-<div id="DivContent"></div> 
+<div class="header-container-wrapper">
+  <div class="header-container">
+    <div class="custom-header-bg">
+      <div class="page-center">
+        <div class="logo">Smart File</div>
+        <div class="navigation">
+          <ul>
+            <li><a href="#" class="button click-upload"><i class="fa fa-cloud-upload" aria-hidden="true"></i>Upload</a></li>
+            <li><a href="#" class="button open-progress"><i class="fa fa-tasks" aria-hidden="true"></i>Progress</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="body-container-wrapper">
   <div class="body-container">
     <div class="page-center">
-      
-     
-
-      
       <i class="fa fa-cloud" aria-hidden="true"></i>
       <h1>Upload Your <strong>Files</strong> To Qbus Server</h1>
       <a class="upload" id="call-to-action"><span>Select Your Upload</span></a>
