CHange for index

--- a/ProjectCode/Web/Templates/index.html
+++ b/ProjectCode/Web/Templates/index.html
@@ -35,7 +35,7 @@
       <input type="file" name="upl" multiple  multiple class="upload-hidden">
           </div>
         </form>
-      <div class="file-upload-bar">
+      <div class="file-upload-bar" style="display:none">
         <div class="bar-wrapper">
           <div class="overall"><span>Overall Progress</span>
             <div class="progress-bar-overall">
