CHange for index

--- a/ProjectCode/templates/file-list.html
+++ b/ProjectCode/templates/file-list.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<!-- Latest compiled and minified CSS -->
-			  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/styles.css') }}" />
-
+		<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/styles.css') }}" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<!-- jQuery library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -23,10 +22,10 @@
         <div class="logo">Enhanced Cloud Security</div>
         <div class="navigation">
           <ul>
-            <li><a href="upload-file" class="button click-upload"><i class="fa fa-cloud-upload" aria-hidden="true"></i>Upload</a></li>
-            <li><a href="register" class="button open-progress"><i class="fa fa-tasks" aria-hidden="true"></i>Register User</a></li>
+            <li><a href="{{ url_for('index') }}" class="button click-upload"><i class="fa fa-cloud-upload" aria-hidden="true"></i>Go to Home Page</a></li>
+            <!--li><a href="register" class="button open-progress"><i class="fa fa-tasks" aria-hidden="true"></i>Register User</a></li>
             <li><a href="public-key-directory" class="button open-progress"><i class="fa fa-download" aria-hidden="true"></i>Download Key</a></li>
-            <li><a href="file-directory" class="button open-progress"><i class="fa fa-download" aria-hidden="true"></i>file-directory</a></li>
+            <li><a href="file-directory" class="button open-progress"><i class="fa fa-download" aria-hidden="true"></i>file-directory</a></li-->
           </ul>
         </div>
       </div>
