--- a/ProjectCode/templates/public-key-list.html
+++ b/ProjectCode/templates/public-key-list.html
@@ -14,10 +14,10 @@
         <div class="logo">Enhanced Cloud Security</div>
         <div class="navigation">
           <ul>
-            <li><a href="upload-file" class="button click-upload"><i class="fa fa-cloud-upload" aria-hidden="true"></i>Upload</a></li>
-            <li><a href="register" class="button open-progress"><i class="fa fa-tasks" aria-hidden="true"></i>Register User</a></li>
+            <li><a href="{{ url_for('index') }}" class="button click-upload"><i class="fa fa-cloud-upload" aria-hidden="true"></i>Go to Home Page</a></li>
+            <!--li><a href="register" class="button open-progress"><i class="fa fa-tasks" aria-hidden="true"></i>Register User</a></li>
             <li><a href="public-key-directory" class="button open-progress"><i class="fa fa-download" aria-hidden="true"></i>Download Key</a></li>
-            <li><a href="file-directory" class="button open-progress"><i class="fa fa-download" aria-hidden="true"></i>file-directory</a></li>
+            <li><a href="file-directory" class="button open-progress"><i class="fa fa-download" aria-hidden="true"></i>file-directory</a></li-->
           </ul>
         </div>
       </div>
