--- a/ProjectCode/templates/register.html
+++ b/ProjectCode/templates/register.html
@@ -60,7 +60,7 @@
 				<input name="first-name" type="text" placeholder= "first name" required width="20vw"> <br > 
 				<input name="last-name" type="text" placeholder= "second name" required width="20vw"> <br >
 				<br>
-				<input type="submit" class="btn btn-lg btn-info">
+				<input type="submit" class="btn btn-lg upload">
 			</form>
       </div>
       <div class="modal-footer">
