CHange for index

--- a/ProjectCode/templates/index.html
+++ b/ProjectCode/templates/index.html
@@ -33,7 +33,7 @@
   <div class="body-container">
     <div class="page-center">
       <i class="fa fa-cloud" aria-hidden="true"></i>
-      <h1>Upload Your <strong>Files</strong> To Cloud Server</h1>
+      <h1 class="main-title">Upload Your <strong>Files</strong> To Cloud Server</h1>
       <a href="upload-file" class="upload" id="call-to-action"><span>Select Your Upload</span></a>
       <!--form id="upload" method="post" action="upload.php" enctype="multipart/form-data">
         <div id="drop">
