Register User & Amazon Keys

--- a/ProjectCode/static/css/styles.css
+++ b/ProjectCode/static/css/styles.css
@@ -481,4 +481,4 @@ span.file-link input {
 	background-repeat: no-repeat;
 	background-size: cover;
 }
-.main-title{ font-size: 55px;}
+.main-title{ font-size: 55px;color:gold;}
